feat: set up activating users
