# cmd/api/api.go
@@ -66,6 +66,7 @@ func (app *application) mount() http.Handler {
 		})
 
 		r.Route("/users", func(r chi.Router) {
+			r.Put("/activate/{token}", app.activateUserHandler)
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
 				r.Get("/", app.getUserHandler)
@@ -78,9 +79,9 @@ func (app *application) mount() http.Handler {
 			})
 
 		})
-	})
-	r.Route("/authentication", func(r chi.Router) {
-		r.Post("/user", app.registerUserHandler)
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
+		})
 	})
 	return r
 }
